language/move-lang/tests/move_check/parser/unicode/vertical_whitespace_in_multiline_comment.exp
error[E01001]: invalid character
  ┌─ tests/move_check/parser/unicode/vertical_whitespace_in_multiline_comment.move:2:6
  │
2 │   /** <
  │      ^ Invalid whitespace character '\u{2028}'

