language/move-lang/tests/move_check/parser/unicode/vertical_whitespace_in_multiline_comment.move
address 0x42 {
  /** <
  module M { }
  */
}
